# MiMiC_CommLib_Test

./: .gitignore  .gitlab-ci.yml  BaseMessageData.h  CMakeLists.txt  DataTypes.h  FloatArrayData.h  JsonSerializer.cpp  JsonSerializer.h  Message.h  MessageApi.cpp  MessageApi.h  MessageService.cpp  MessageService.h  README.md  Serializer.h  SystemData.h  commlib.conf  main.cpp  tests.cpp
cmake/: CTestCustom.cmake  CommlibConfig.cmake
comm_test/: run.sh  run_old.sh  test1.out  test2.out
comm_test/test1/: Makefile  compile.sh  test1  test1.cpp
comm_test/test2/: .portname  Makefile  test2  test2.cpp
first_test/: main.cpp  run.sh  test
lib/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/src/: Makefile  MimicCommLibConfig.cmake  MimicCommLibTargets.cmake  cmake_install.cmake
message/: BaseMessageData.h  FloatArrayData.h  Message.h  RawDataStruct.h  SystemData.h
second_test/: .portname  main1.cpp  main2.cpp  run.sh  test1  test1.out  test2  test2.out
second_test/message/: ClientData.h
second_test/serializer/: Serializer.h
second_test/test1/: Makefile  test1  test1.cpp
second_test/test2/: Makefile  test2  test2.cpp
second_test/transport/: Client.h
serializer/: BoostSerializer.cpp  BoostSerializer.h  Serializer.h
src/: CMakeLists.txt  DataTypes.h  MCLMain.h  MCLf2c.cpp  MCLf2c.h  MCLfortran.f90  MessageApi.cpp  MessageApi.h
src/fortran/: MCL_Fortran.f90  MCL_Interface.f90  MCL_fortran.f90  MCL_send_recv.f90  MCLfortran.f90  mcl_fortran.f90  mcl_interface.f90  mcl_send_recv.f90
src/message/: BaseMessageData.h  ClientData.h  FloatArrayData.h
src/serializer/: Serializer.h
src/transport/: Client.cpp  Client.h  Endpoint.h  IBTransport.h  MPITransport.cpp  MPITransport.h  MPMDTransport.cpp  MPMDTransport.hpp  Server.cpp  Server.h  Transport.h
tests/: APITest.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  EndpointsTest.cpp  MPITransportTest.cpp  MPMDTransportTest.cpp  Makefile  cmake_install.cmake  tests.cpp  transport_tests.cpp
tests/Testing/Temporary/: CTestCostData.txt
tests/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
tests/googletest-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
tests/googletest-download/googletest-download-prefix/tmp/: googletest-download-gitclone.cmake  googletest-download-gitupdate.cmake
tests/src/: Makefile  MimicCommLibTargets.cmake  cmake_install.cmake
tests/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
transport/: BoostSocketTransport.cpp  BoostSocketTransport.h  Client.cpp  Client.h  Endpoint.h  MPITransport.cpp  MPITransport.h  Server.cpp  Server.h  SocketTransport.cpp  SocketTransport.h  Transport.h
